# LangGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: 01_First_Graph.ipynb  02_Pydantic.ipynb  03_messages.ipynb  04_Prompts&Chains.ipynb  05_Tools&Binding.ipynb  06_ReAct.ipynb  07_Parallelization.ipynb  08_Router.ipynb  09_Orchestrator_Worker.ipynb  10_Generator_Evaluator.ipynb  11_Memory.ipynb  12_HumanInLoop.ipynb
