[project]
name = "langgraphp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=4.0.0",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
